# runtime-jakarta/src/main/kotlin/com/example/marvel/web/rest/jakarta/EmployeeOrchestrationResource.kt
@@ -1,6 +1,8 @@
 package com.example.marvel.web.rest.jakarta
 
+import com.example.marvel.domain.model.api.employee.EmployeeCreateCommand
 import com.example.marvel.domain.model.api.employee.EmployeeDto
+import com.example.marvel.domain.model.api.employee.EmployeeUpdateCommand
 import com.example.marvel.domain.model.api.record.RecordDto
 import com.example.marvel.domain.model.api.recordcollection.RecordCollectionCreateCommand
 import com.example.marvel.domain.model.api.recordcollection.RecordCollectionDto
@@ -10,15 +12,13 @@ import com.example.marvel.web.rest.EmployeeResourceAdapter
 import io.reactivex.Flowable
 import io.vertx.core.eventbus.EventBus
 import io.vertx.kotlin.core.json.jsonObjectOf
-import io.vertx.kotlin.coroutines.dispatcher
-import kotlinx.coroutines.CoroutineScope
-import kotlinx.coroutines.future.future
 import java.time.Month
 import java.time.Year
+import java.util.concurrent.CompletableFuture
 import java.util.concurrent.CompletionStage
 import javax.annotation.PostConstruct
 import javax.inject.Inject
-import javax.transaction.Transactional
+import javax.inject.Named
 import javax.ws.rs.Consumes
 import javax.ws.rs.GET
 import javax.ws.rs.NotFoundException
@@ -31,22 +31,16 @@ import javax.ws.rs.QueryParam
 import javax.ws.rs.core.Context
 import javax.ws.rs.core.HttpHeaders
 import javax.ws.rs.core.MediaType.APPLICATION_JSON
-import kotlin.coroutines.CoroutineContext
 import io.vertx.core.Vertx as VertxBare
 
 /**
  * Named imports used for program composition to be more self-documented
  */
+@Named
 @Path("/api")
 @Produces(APPLICATION_JSON)
 @Consumes(APPLICATION_JSON)
-class EmployeeOrchestrationResource @Inject constructor(VX: VertxBare, private val employees: EmployeeOperationsServiceNamespace)
-    : EmployeeResourceAdapter,
-        /**
-         * FIXME: @see in [README.md]
-         */
-//    EmployeeOperationsServiceNamespace by employees,
-    CoroutineContext                   by VX.dispatcher() {
+class EmployeeOrchestrationResource @Inject constructor(VX: VertxBare, private val employees: EmployeeOperationsServiceNamespace) : EmployeeResourceAdapter {
 
     /**
      * Could move to ctor
@@ -68,12 +62,27 @@ class EmployeeOrchestrationResource @Inject constructor(VX: VertxBare, private v
         eventBus.registerCodec(DomainEventCodec())
     }
 
-    @Transactional
+    @POST
+    @Path("/employee")
+    override fun createEmployee(
+            employee: EmployeeCreateCommand): CompletionStage<EmployeeDto> = CompletableFuture.supplyAsync {
+        employees.createEmployee(employee)
+    }
+
+    @PUT
+    @Path("/employee/{id:[1-9][0-9]*}")
+    override fun updateEmployee(
+            @PathParam("id") id: Long,
+            employee: EmployeeUpdateCommand): CompletionStage<EmployeeDto> = CompletableFuture.supplyAsync {
+        employees.updateEmployee(id, employee)
+    }
+
     @GET
     @Path("/employee")
+    @Produces("application/stream+json")
     override fun getEmployees(): Flowable<EmployeeDto> =
             Flowable.fromIterable(Iterable(employees.streamEmployees()::iterator))
-                    .doFinally { eventBus.publish("any.address", jsonObjectOf("pojo event" to """example \"EmployeeCreatedEvent\"""")) }
+                    .doFinally { eventBus?.publish("any.address", jsonObjectOf("pojo event" to """example \"EmployeeCreatedEvent\"""")) }
 
     @GET
     @Path("/employee/{id:[1-9][0-9]*}/records")
@@ -87,7 +96,7 @@ class EmployeeOrchestrationResource @Inject constructor(VX: VertxBare, private v
     @Path("/employee/{id:[1-9][0-9]*}/records")
     override fun saveWholePeriod(
             @PathParam("id") id: Long,
-            records: RecordCollectionCreateCommand): CompletionStage<RecordCollectionDto> = CoroutineScope(this).future {
+            records: RecordCollectionCreateCommand): CompletionStage<RecordCollectionDto> = CompletableFuture.supplyAsync {
         employees.createWholePeriod(id, records) ?: throw NotFoundException()
     }
 
@@ -95,7 +104,7 @@ class EmployeeOrchestrationResource @Inject constructor(VX: VertxBare, private v
     @Path("/employee/{id:[1-9][0-9]*}/records")
     override fun adjustWholePeriod(
             @PathParam("id") id: Long,
-            records: RecordCollectionUpdateCommand): CompletionStage<RecordCollectionDto> = CoroutineScope(this).future {
+            records: RecordCollectionUpdateCommand): CompletionStage<RecordCollectionDto> = CompletableFuture.supplyAsync {
         employees.updateWholePeriod(id, records) ?: throw NotFoundException()
     }
 }
