# runtime-jakarta/src/main/resources/META-INF/resources/openapi.yaml
@@ -40,11 +40,26 @@ paths:
         default:
           description: default response
           content:
-            application/json:
+            application/stream+json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/EmployeeDto'
+    post:
+      operationId: createEmployee
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/EmployeeCreateCommand'
+        required: true
+      responses:
+        default:
+          description: default response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EmployeeDto'
   /management/configprops:
     get:
       tags:
@@ -258,6 +273,29 @@ paths:
         404:
           description: Not Found
       deprecated: false
+  /api/employee/{id}:
+    put:
+      operationId: updateEmployee
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/EmployeeUpdateCommand'
+        required: true
+      responses:
+        default:
+          description: default response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EmployeeDto'
   /api/employee/{id}/records:
     get:
       operationId: getForPeriod
@@ -365,6 +403,33 @@ components:
           format: int64
         email:
           type: string
+    EmployeeCreateCommand:
+      required:
+      - email
+      - name
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        email:
+          type: string
+    EmployeeUpdateCommand:
+      required:
+      - email
+      - id
+      - name
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        email:
+          type: string
     RecordDto:
       type: object
       properties:
@@ -382,11 +447,16 @@ components:
           - EDUCATION
           - STAND_BY
           - KILOMETRES
+        date:
+          example: 1544391144
+          anyOf:
+          - type: string
+            format: date
+          - type: integer
+            format: int64
+          - type: number
         desc:
           type: string
-        date:
-          type: string
-          format: date
         hoursSubmitted:
           type: number
     RecordCollectionDto:
@@ -405,12 +475,8 @@ components:
           type: integer
           format: int64
         year:
-          pattern: '[0-9]{4}'
-          example: 2018
-          anyOf:
-          - type: string
-          - type: integer
-            format: int32
+          type: integer
+          format: int32
         month:
           type: string
           enum:
@@ -439,12 +505,8 @@ components:
           type: integer
           format: int64
         year:
-          pattern: '[0-9]{4}'
-          example: 2018
-          anyOf:
-          - type: string
-          - type: integer
-            format: int32
+          type: integer
+          format: int32
         month:
           type: string
           enum:
@@ -467,6 +529,12 @@ components:
           format: int64
         records:
           type: array
+          properties:
+            empty:
+              type: boolean
+            size:
+              type: integer
+              format: int32
           items:
             $ref: '#/components/schemas/RecordCreateCommand'
     RecordCreateCommand:
@@ -478,8 +546,13 @@ components:
       type: object
       properties:
         date:
-          type: string
-          format: date
+          example: 1544391144
+          anyOf:
+          - type: string
+            format: date
+          - type: integer
+            format: int64
+          - type: number
         type:
           type: string
           enum:
@@ -512,12 +585,8 @@ components:
           type: integer
           format: int64
         year:
-          pattern: '[0-9]{4}'
-          example: 2018
-          anyOf:
-          - type: string
-          - type: integer
-            format: int32
+          type: integer
+          format: int32
         month:
           type: string
           enum:
@@ -551,8 +620,13 @@ components:
       type: object
       properties:
         date:
-          type: string
-          format: date
+          example: 1544391144
+          anyOf:
+          - type: string
+            format: date
+          - type: integer
+            format: int64
+          - type: number
         type:
           type: string
           enum:
@@ -571,8 +645,6 @@ components:
         recordCollectionId:
           type: integer
           format: int64
-    Publisher:
-      type: object
   securitySchemes:
     BasicAuth:
       type: http
